--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "firebase/app": "https://esm.sh/firebase@10.8.0/app",
-    "firebase/firestore": "https://esm.sh/firebase@10.8.0/firestore",
-    "firebase/storage": "https://esm.sh/firebase@10.8.0/storage",
-    "firebase/auth": "https://esm.sh/firebase@10.8.0/auth",
-    "@emailjs/browser": "https://esm.sh/@emailjs/browser@4.3.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
+    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@7.1.1",
+    "lucide-react": "https://esm.sh/lucide-react@0.471.0",
+    "firebase/app": "https://esm.sh/firebase@10.13.0/app",
+    "firebase/firestore": "https://esm.sh/firebase@10.13.0/firestore",
+    "firebase/storage": "https://esm.sh/firebase@10.13.0/storage",
+    "firebase/auth": "https://esm.sh/firebase@10.13.0/auth",
+    "@emailjs/browser": "https://esm.sh/@emailjs/browser@4.4.1",
     "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
